add run_batch.sh and modify gitignore